@@ -1969,7 +1969,7 @@ ui.plugin.MoveLayerablePlugIn.layer-is-already-at-the-top = La couche est d\u00e
 ui.plugin.MoveLayerablePlugIn.move-layer-down = D\u00e9placer la couche vers le bas
 ui.plugin.MoveLayerablePlugIn.move-layer-up = D\u00e9placer la couche vers le haut
 ui.plugin.MoveLayerablePlugIn.destination-category = Cat\u00e9gorie cible
-ui.plugin.MoveLayerablePlugIn.move-to-category = D\u00e9placer la couche s\u00e9lectionn\u00e9e vers une autre cat\u00e9gorie
+ui.plugin.MoveLayerablePlugIn.move-to-category = D\u00e9placer les couches s\u00e9lectionn\u00e9es vers une autre cat\u00e9gorie
 ui.plugin.MoveLayerablePlugIn.move-to-top = D\u00e9placer en haut
 ui.plugin.MoveLayerablePlugIn.move-to-bottom = D\u00e9placer en bas
 ui.plugin.OpenProjectPlugIn.The-project-has-been-moved-Do-you-want-to-update-paths-below-the-project-folder = Le projet a \u00e9t\u00e9 d\u00e9plac\u00e9. Voulez-vous mettre \u00e0 jour les chemins des fichiers situ\u00e9s dans le r\u00e9pertoire du projet ?.
