@@ -7,6 +7,7 @@
   * Fix bug #433 throwing exception when applying scale limits in bad order
   * Optimization : changeStyle was applying the new style two times
   * Fix #432 Zipped datasource should be unmodifiable
+  * Improve MoveSelectedLayerable to another category
 
 2016-10-08 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
   * Upgraded Sextante (Correct bug #410. Added Sextante Data Explorer)
